# PasswordManager-Backend

./: .gitignore  Cargo.toml  README.md  dockerfile  minio-compose.yaml  pm.sql  server-compose.yaml
2/: password.txt  pmanager.pm
src/: main.rs
src/common/: error.rs  mod.rs  router.rs  swagger.rs
src/controllers/: mod.rs  tokendb.rs  tokens.rs  userdb.rs  users.rs
src/crypt/: encryption.rs  password.rs  token.rs
src/database/: tokens.rs  users.rs
src/handlers/: auth.rs  mod.rs  storage.rs  types.rs
