[package]
name = "PasswordManager-Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
password-auth = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["mysql"] }
tokio = { version = "1.44.0", features = ["full"] }
tracing-subscriber = "0.3.19"
