[package]
name = "PasswordManager-Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
password-auth = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.44.0", features = ["full", "io-util"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tracing-subscriber = "0.3.19"
