[package]
name = "PasswordManager-Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
chrono = "0.4.40"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
password-auth = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["buffer", "limit"] }
tower-http = { version = "0.6.2", features = ["cors", "catch-panic"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.44.0", features = ["full", "io-util"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing = "0.1.41"
minio = "0.3.0"
